--- a/RPC-Bondalapati/Base.lproj/Main.storyboard
+++ b/RPC-Bondalapati/Base.lproj/Main.storyboard
@@ -1,24 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Player 2-->
+        <scene sceneID="zCT-LN-65i">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="qN2-Al-7X9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DIV-Ev-oTV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="bzr-pC-sLS"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Player 2" image="icons8-minion-filled-25" id="FXy-ec-ueH"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SDq-vK-bMT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-274" y="-145"/>
+        </scene>
+        <!--Player 1-->
+        <scene sceneID="0jT-dj-s14">
+            <objects>
+                <viewController id="XiQ-R8-WKs" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dZ9-wM-NJv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="QGm-aV-DFH"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Player 1" image="icons8-minion-25" id="mvB-lC-jO2"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GcQ-EQ-c8t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-273" y="-1040"/>
+        </scene>
+        <!--Result-->
+        <scene sceneID="cBj-Bb-PCU">
+            <objects>
+                <viewController id="gT4-4e-Raa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="D5p-5S-whl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="aM4-j1-Ngb"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Result" image="icons8-leaderboard-25" id="PA2-Jg-Jpg"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5JL-Zx-EVA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1170" y="-1066"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Nqh-gA-GSF">
+            <objects>
+                <tabBarController id="F7d-fd-R0c" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="95w-d4-8jw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="gT4-4e-Raa" kind="relationship" relationship="viewControllers" id="PgA-MN-pZr"/>
+                        <segue destination="XiQ-R8-WKs" kind="relationship" relationship="viewControllers" id="xgx-AG-juV"/>
+                        <segue destination="qN2-Al-7X9" kind="relationship" relationship="viewControllers" id="T1I-Xb-0jM"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AyR-DJ-H8K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1270" y="-376"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icons8-leaderboard-25" width="25" height="25"/>
+        <image name="icons8-minion-25" width="25" height="25"/>
+        <image name="icons8-minion-filled-25" width="25" height="25"/>
+    </resources>
 </document>
